--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,4 +62,12 @@ jobs:
     steps:
       - name: Build as Standalone Source
         shell: bash
-        run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true 
+        run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true
+
+  build-docker:
+    needs: setup
+    runs-on: ["self-hosted", "run-${{github.run_id}}"]
+    steps:
+      - name: Build Docker Image
+        shell: bash
+        run: docker build -t githubapicli-server .
