--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,4 +70,4 @@ jobs:
     steps:
       - name: Build Docker Image
         shell: bash
-        run: docker run -it hello-world && docker build -t githubapicli-server .
+        run: docker run hello-world && docker build -t githubapicli-server .
