--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
         run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true
 
   build-docker:
-    needs: setup
+    needs: [setup, build-source]
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
     steps:
       - name: Build Docker Image
