--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
       
       - name: Build and Push
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/githubapicli-server:latest .
-          docker push ghcr.io/${{ github.repository_owner }}/githubapicli-server:latest
+          docker build -t ghcr.io/nano-dna-studios/githubapicli-server:latest .
+          docker push ghcr.io/nano-dna-studios/githubapicli-server:latest
 
 
