Tagging and Versioning

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -91,12 +91,16 @@ jobs:
         run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" -p:Version=${{ needs.version.outputs.version }} --self-contained true
   
   build-docker:
-    needs: build-source
+    needs: [build-source, version]
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
     steps:
       - name: Build Docker Image
         shell: bash
-        run: docker build -t githubcli-webserver .
+        run: docker build -t githubapicli-server:latest .
+      
+      - name: Tag the Docker Image
+        shell: bash
+        run: docker tag githubapicli-server:latest ghcr.io/nano-dna-studios/githubapicli-server:${{ needs.version.outputs.version }}
 
   upload-source:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
@@ -147,6 +151,21 @@ jobs:
           --source "https://api.nuget.org/v3/index.json" \
           --api-key "$NUGET_API_KEY" \
           --skip-duplicate
+
+  upload-docker:
+    needs: [build-docker, version]
+    runs-on: ["self-hosted", "run-${{github.run_id}}"]
+    steps:
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push
+        shell: bash
+        run: docker push ghcr.io/nano-dna-studios/githubapicli-server:${{ needs.version.outputs.version }}
 
   upload-scripts:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
