--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,23 +70,8 @@ jobs:
     steps:
       - name: Build Docker Image
         shell: bash
-        run: docker build -t mrdnalex/githubcli-webserver .
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+        run: docker build -t githubapicli-server:latest .
       
-
-      #- name: Login to Docker Registry
-      #  shell: bash
-      #  run: echo "$GITHUB_TOKEN" | docker login ghcr.io -u MrDNAlex --password-stdin
-      
-      - name: Build and Push
-        run: |
-          docker build -t ghcr.io/nano-dna-studios/githubapicli-server:latest .
-          docker push ghcr.io/nano-dna-studios/githubapicli-server:latest
-
-
+      - name: Tag the Docker Image
+        shell: bash
+        run: docker tag githubapicli-server:latest ghcr.io/nano-dna-studios/githubapicli-server:latest
