--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,8 +68,4 @@ jobs:
     steps:
       - name: Build Docker Image
         shell: bash
-        run: docker build -t githubapicli-server:latest .
-      
-      - name: Tag the Docker Image
-        shell: bash
-        run: docker tag githubapicli-server:latest ghcr.io/nano-dna-studios/githubapicli-server:latest
+        run: docker build -t ghcr.io/nano-dna-studios/githubapicli-server:latest .
