--- a/GitHubAPICLI/GitHubAPICLI.csproj
+++ b/GitHubAPICLI/GitHubAPICLI.csproj
@@ -9,6 +9,7 @@
 		<IsPackable>true</IsPackable>
 		<PackAsTool>true</PackAsTool>
 		<ToolCommandName>githubapi</ToolCommandName>
+		<DebugType>embedded</DebugType>
 	</PropertyGroup>
 
 	<!-- Add Individual Platforms in NuGet Package -->
