--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
     steps:
       - name: Build for NuGet 
         shell: bash
-        run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -f net8.0 -p:Version=${{ needs.version.outputs.version }}
+        run: dotnet build ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -f net8.0 -p:Version=${{ needs.version.outputs.version }}
 
       - name: Pack for NuGet
         id: pack-nuget
